# getit

./: CMakeLists.txt  ReadMe.md  ReadMe.txt
config/: CMakeLists.txt  config.xml  getit.conf
config/customers/: custom_1.csv  custom_2.csv  custom_3.csv
getit_library/: CMakeLists.txt
getit_library/src/: config.cpp  config.h  database.cpp  database.h  file.cpp  file.h  fruit.cpp  fruit.h  iface.h  main.cpp  main.h  manager.cpp  manager.h  mediator.cpp  mediator.h  provider.cpp  provider.h  visitors.cpp  visitors.h
run_src/: main.cpp
